# ios-backend-fastapi

./: .env.example  .gitignore  Dockerfile  README.md  exportOptions.plist  firestore.rules  instructions.md  main.py  main.tf  pyproject.toml
.github/workflows/: appstore.yml  ci-cd.yml  cleanup.yml  deploy.yml  ios.yml
Project/: Config.json  NetworkManager.swift
WedgeIosApp/: Configuration.swift
WedgeIosApp/WedgeIosApp/: ContentView.swift  WedgeIosAppApp.swift
WedgeIosApp/WedgeIosApp.xcodeproj/: project.pbxproj
WedgeIosApp/WedgeIosApp.xcodeproj/project.xcworkspace/xcuserdata/fddiferd.xcuserdatad/: UserInterfaceState.xcuserstate
WedgeIosApp/WedgeIosApp.xcodeproj/xcuserdata/fddiferd.xcuserdatad/xcschemes/: xcschememanagement.plist
WedgeIosApp/WedgeIosAppTests/: WedgeIosAppTests.swift
WedgeIosApp/WedgeIosAppUITests/: WedgeIosAppUITests.swift  WedgeIosAppUITestsLaunchTests.swift
app/: main.py
ios/WedgeGolf/WedgeGolf/: NetworkManager.swift
scripts/: initial_setup.sh  setup.sh
src/: config.py
terraform/: main.tf
